# backchannel

./: .gitignore  PLAN.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: conversations.rs  mod.rs  search.rs  settings.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs  parser.rs  queries.rs
src-tauri/src/llm/: client.rs  mod.rs  nl2sql.rs  prompts.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/utils/: date.rs  mod.rs
src/components/common/: StreamingText.tsx
src/components/conversations/: ConversationDetail.tsx  ConversationList.tsx  ConversationsView.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/search/: MessageCard.tsx  SearchBar.tsx  SearchResults.tsx  SearchView.tsx
src/components/settings/: OnboardingModal.tsx  SettingsModal.tsx
src/lib/: types.ts  utils.ts
src/stores/: conversationStore.ts  searchStore.ts  settingsStore.ts
src/styles/: globals.css
